Fixed spacing

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ p {
   box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.11);
   border: 1px solid #bed3c1;
   border-radius: 10px;
-  margin: 15px 10px;
+  margin: 15px 20px;
 }
 
 #feature img {
@@ -195,7 +195,7 @@ p {
   border-radius: 25px;
   cursor: pointer;
   box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.13);
-  margin: 15px 15px;
+  margin: 15px 20px;
   transition: 0.2s ease;
   position: relative;
 }
